Implemented AI. Needs a refactor.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="en">
 <head>
@@ -11,7 +11,7 @@
     <div id="board"></div>
     <div id="setupBar">
         <button id="pvp" class="button" style="top:25px; left: 175px;">PvP Mode</button>
-        <button id="ai-easy" disabled class="button" style="top:25px; left: 300px;">AI Normal</button>
+        <button id="ai-normal" class="button" style="top:25px; left: 300px;">AI Normal</button>
         <button id="ai-hard" disabled class="button" style="top: 25px; left: 425px;">AI Hard</button>
     </div>
     <div id="status"></div>
