--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="setupBar">
         <button id="pvp" class="button" style="top:25px; left: 175px;">PvP Mode</button>
         <button id="ai-normal" class="button" style="top:25px; left: 300px;">AI Normal</button>
-        <button id="ai-hard" disabled class="button" style="top: 25px; left: 425px;">AI Hard</button>
+        <button id="ai-hard" class="button" style="top: 25px; left: 425px;">AI Hard</button>
     </div>
     <div id="status"></div>
 </body>
